--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,11 @@ name = "yapca"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = ["pydantic-settings>=2.6.1", "pydantic>=2.9.2"]
+dependencies = [
+    "httpx>=0.27.2",
+    "pydantic-settings>=2.6.1",
+    "pydantic>=2.9.2",
+]
 dynamic = ["version"]
 
 [build-system]
