--- a/.gitignore
+++ b/.gitignore
@@ -194,4 +194,5 @@ pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,visualstudiocode
 
-tests/secrets/
+tests/secrets/*
+!tests/secrets/.gitkeep
